--- a/style.css
+++ b/style.css
@@ -1,3 +1,124 @@
 body{
     box-sizing: border-box;
+    margin: 0;
+    padding: 0%;
+    background-color: rgba(226, 226, 226, 0.775);
+}
+a{
+    color: rgba(0, 0, 0, 0.679);
+    text-decoration: none;
+}
+
+.nav-bar{
+    background-color: rgba(247, 247, 247, 0.665);
+}
+.btn{
+    margin-right: 0px;
+}
+.fa-bars{
+    width: 50px;
+    size: 100px;
+}
+.grid-item{
+    position: relative;
+
+}
+.grid-item:hover{
+    transform: scale(1.1);
+    transition: all 0.3s ease-in-out;
+}
+.icon-link{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+
+.flex-container{
+    padding: 1rem;
+    display: flex;
+    align-items: stretch;
+    justify-content: space-around;
+
+}
+.fa,.fas{
+    margin-top: 12px;
+}
+
+.container{
+    /* margin-top: 3rem; */
+    height: auto;
+}
+/* .grid-container{
+    display: grid;
+    
+    align-content: space-evenly;
+    grid-gap: 50px 50px;
+    justify-content: space-around;
+    align-self: center;
+} */
+#g1{
+    background-color: rgb(44, 187, 68);
+    /* padding: 30px 50px 70px 70px;
+    grid-column: 1/3;
+    border-radius: 10px; */
+    padding: 30px 50px 70px 70px;
+    border-radius: 10px;
+}
+
+#g2{
+    
+    background-color: rgb(118, 174, 216);
+    /* padding: 30px 50px 70px 70px;
+    grid-column: 4/6;
+    border-radius: 10px; */
+    padding: 30px 50px 70px 70px;
+    border-radius: 10px;
+}
+
+#g3{
+    /* grid-column: 7/9; */
+    background-color: rgba(223, 25, 25, 0.761);
+    /* padding: 30px 50px 70px 70px;
+    border-radius: 10px; */
+    padding: 30px 50px 70px 70px;
+    border-radius: 10px;
+}
+#g4{
+    background-color: rgb(181, 181, 181);
+    /* padding: 20px 65px 23px 45px;
+    grid-column: 5  ;
+    width: 50px;
+    border-radius: 50%;
+    display: inline-block; */
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 30px 50px 70px 70px;
+    border-radius: 10px;
+}
+#g5{
+    background-color: purple;
+    /* grid-column: 1/3;
+    padding: 30px 50px 70px 70px;
+    border-radius: 10px; */
+    padding: 30px 50px 70px 70px;
+    border-radius: 10px;
+}
+#g6{
+    background-color: rgb(73, 73, 73);
+    /* grid-column: 4/6;
+    padding: 30px 50px 70px 70px;   
+    border-radius: 10px; */
+    padding: 30px 50px 70px 70px;
+    border-radius: 10px;
+}
+#g7{
+    background-color: rgb(230, 230, 24);
+    /* grid-column: 7/9;
+    margin-top: 10px;
+    padding: 30px 50px 70px 70px;
+    border-radius: 10px; */
+    padding: 30px 50px 70px 70px;
+    border-radius: 10px;
 }
