--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ a{
 }
 .grid-item{
     position: relative;
+    margin-bottom: 20px;
 
 }
 .grid-item:hover{
@@ -38,8 +39,8 @@ a{
 .flex-container{
     padding: 1rem;
     display: flex;
-    align-items: stretch;
-    justify-content: space-around;
+    justify-content: space-between;
+    align-self: center;
 
 }
 .fa,.fas{
@@ -121,4 +122,11 @@ a{
     border-radius: 10px; */
     padding: 30px 50px 70px 70px;
     border-radius: 10px;
+}
+
+@media (max-width: 500px) {
+    .grid-item{
+        margin: 20px;
+        align-items: center;
+    }
 }
