--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ a:hover{
     border-radius: 10px;
 }
 #g5{
-    background-color: purple;
+    background-color: rgb(151, 15, 151);
     /* grid-column: 1/3;
     padding: 30px 50px 70px 70px;
     border-radius: 10px; */
