--- a/style.css
+++ b/style.css
@@ -7,9 +7,17 @@ body{
 a{
     color: rgba(0, 0, 0, 0.474);
     text-decoration: none;
+    display: inline-block;     
+    /* position: relative;     */
+    z-index: 1;     
+    padding: 2em 10em;     
 }
 a:hover{
     color:black;
+}
+
+i{
+    pointer-events: none;
 }
 
 .nav-bar{
