--- a/CSS/navig.css
+++ b/CSS/navig.css
@@ -3,14 +3,16 @@ body{
     margin: 0;
     padding: 0%;
     background-color: rgba(226, 226, 226, 0.775);
+    overflow:hidden;
+    font-family:monospace;
 }
+
 
 .mic{
     text-decoration: none;
     color: rgba(0, 0, 0, 0.563);
     text-decoration: none;
     display: inline-block;     
-    /* position: relative;     */
     z-index: 1;     
     padding: 1rem 11rem;
 }
@@ -51,17 +53,15 @@ i{
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+.icon-link:hover{
+    color: black;
+}
+
 #g4{
     background-color: rgb(181, 181, 181);
-    /* padding: 20px 65px 23px 45px;
-    grid-column: 5  ;
-    width: 50px;
-    border-radius: 50%;
-    display: inline-block; */
-    /* margin: 1rem 20rem 3rem 20rem;
-    padding: 30px 10px 70px 70px; */
+    
     border-radius: 10px;
-    /* width: 80vw; */
 
     padding: 2rem 0rem 2rem 0rem;
     border-radius: 10px;
@@ -70,11 +70,36 @@ i{
 }
 
 
-@media (max-width:700px) {
+@media (max-width: 900px) {
     
     .main{
+        display: flex;
         flex-direction: column-reverse;
-        
+    }
+
+    #result{
+        font-size: 1.2rem;
+        padding: 0rem;
+        margin-left: 3rem;
+    }
+
+    #myMap{
+        width: 60%;
+        height: 36vh;
+        margin-left: 2.5rem;
+    }
+    #g4{
+        margin-left: 5rem;
+    }
+
+}
+
+
+@media (max-width: 600px) {
+    
+    .main{
+        display: flex;
+        flex-direction: column-reverse;
     }
 
     #result{
@@ -85,10 +110,11 @@ i{
 
     #myMap{
         width: 60%;
-        height: 43vh;
+        height: 36vh;
     }
     #g4{
-        margin-left: 9em;
+        margin-left: 7.8rem;
     }
+
 }
 
